--- a/src/assets/scss/views/Profile.module.scss
+++ b/src/assets/scss/views/Profile.module.scss
@@ -20,7 +20,7 @@
 }
 
 .card_header_class {
-  margin: -100px auto 0px !important;
+  margin: -130px auto 0px !important;
 }
 
 .contant_list {
@@ -28,6 +28,7 @@
 }
 
 .certBadge {
+  max-width: initial;
   width: 120px;
   height: 120px;
 }
